--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
@@ -172,6 +172,9 @@
   <data name="Play32_White" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Play32_White.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="plus32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\plus32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="plus32_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plus32_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -183,6 +186,9 @@
   </data>
   <data name="RunIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RunIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SaveIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SaveIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="StopIcon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StopIcon_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
