--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/NotificationsControl.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/NotificationsControl.resx
@@ -118,23 +118,56 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pbStatus.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pbStatus.Location" type="System.Drawing.Point, System.Drawing">
+    <value>2, 1</value>
+  </data>
+  <data name="pbStatus.Size" type="System.Drawing.Size, System.Drawing">
+    <value>71, 61</value>
+  </data>
+  <data name="pbStatus.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
+    <value>CenterImage</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pbStatus.TabIndex" type="System.Int32, mscorlib">
+    <value>66</value>
+  </data>
+  <data name="&gt;&gt;pbStatus.Name" xml:space="preserve">
+    <value>pbStatus</value>
+  </data>
+  <data name="&gt;&gt;pbStatus.Type" xml:space="preserve">
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;pbStatus.Parent" xml:space="preserve">
+    <value>panel7</value>
+  </data>
+  <data name="&gt;&gt;pbStatus.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="imgBtnStatus.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="imgBtnStatus.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt, style=Bold</value>
   </data>
+  <data name="imgBtnStatus.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="imgBtnStatus.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 10</value>
+    <value>13, 12</value>
+  </data>
+  <data name="imgBtnStatus.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="imgBtnStatus.Padding" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 0, 0, 5</value>
+    <value>0, 0, 0, 6</value>
   </data>
   <data name="imgBtnStatus.Size" type="System.Drawing.Size, System.Drawing">
-    <value>38, 37</value>
+    <value>51, 46</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="imgBtnStatus.TabIndex" type="System.Int32, mscorlib">
     <value>65</value>
   </data>
@@ -148,7 +181,7 @@
     <value>panel7</value>
   </data>
   <data name="&gt;&gt;imgBtnStatus.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="lblProcessStatusMessage.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -160,10 +193,13 @@
     <value>NoControl</value>
   </data>
   <data name="lblProcessStatusMessage.Location" type="System.Drawing.Point, System.Drawing">
-    <value>54, 17</value>
+    <value>72, 21</value>
+  </data>
+  <data name="lblProcessStatusMessage.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="lblProcessStatusMessage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>506, 23</value>
+    <value>676, 28</value>
   </data>
   <data name="lblProcessStatusMessage.TabIndex" type="System.Int32, mscorlib">
     <value>58</value>
@@ -184,7 +220,7 @@
     <value>panel7</value>
   </data>
   <data name="&gt;&gt;lblProcessStatusMessage.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="panel7.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -192,8 +228,11 @@
   <data name="panel7.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
+  <data name="panel7.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
+  </data>
   <data name="panel7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>578, 53</value>
+    <value>771, 65</value>
   </data>
   <data name="panel7.TabIndex" type="System.Int32, mscorlib">
     <value>67</value>
@@ -214,15 +253,18 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
+    <value>8, 16</value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>578, 53</value>
+    <value>771, 65</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>NotificationsControl</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>DBAutoVersions.WinApp.NinjectUtils_WinForm.UserControleNinjectBase, DBAutoVersions.WinApp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
