--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
@@ -193,6 +193,12 @@
   <data name="SaveIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SaveIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Spinner3_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Spinner3_32.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Spinner3_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Spinner3_64.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="StopIcon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StopIcon_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
