--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
@@ -211,4 +211,7 @@
   <data name="VirtualExecution2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VirtualExecution2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="warning_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\warning_32.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
