--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
@@ -125,7 +125,7 @@
     <value>..\Resources\AddIcon32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AppIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\AppIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\AppIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ApplyIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ApplyIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
