--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/NotificationsControl.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/NotificationsControl.resx
@@ -118,10 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lblProcessLog.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblProcessLog.Location" type="System.Drawing.Point, System.Drawing">
+    <value>686, 41</value>
+  </data>
+  <data name="lblProcessLog.Size" type="System.Drawing.Size, System.Drawing">
+    <value>87, 23</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lblProcessLog.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="lblProcessLog.Text" xml:space="preserve">
+    <value>Process Log</value>
+  </data>
+  <data name="&gt;&gt;lblProcessLog.Name" xml:space="preserve">
+    <value>lblProcessLog</value>
+  </data>
+  <data name="&gt;&gt;lblProcessLog.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblProcessLog.Parent" xml:space="preserve">
+    <value>panel7</value>
+  </data>
+  <data name="&gt;&gt;lblProcessLog.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="pbStatus.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pbStatus.Location" type="System.Drawing.Point, System.Drawing">
     <value>2, 1</value>
   </data>
@@ -131,7 +159,6 @@
   <data name="pbStatus.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>CenterImage</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="pbStatus.TabIndex" type="System.Int32, mscorlib">
     <value>66</value>
   </data>
@@ -145,7 +172,49 @@
     <value>panel7</value>
   </data>
   <data name="&gt;&gt;pbStatus.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
+  </data>
+  <data name="btnProcessLog.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
+  </data>
+  <data name="btnProcessLog.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
+    <value>Center</value>
+  </data>
+  <data name="btnProcessLog.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
+  <data name="btnProcessLog.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 20pt</value>
+  </data>
+  <data name="btnProcessLog.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleLeft</value>
+  </data>
+  <data name="btnProcessLog.Location" type="System.Drawing.Point, System.Drawing">
+    <value>703, -1</value>
+  </data>
+  <data name="btnProcessLog.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>0, 0, 0, 0</value>
+  </data>
+  <data name="btnProcessLog.Size" type="System.Drawing.Size, System.Drawing">
+    <value>63, 48</value>
+  </data>
+  <data name="btnProcessLog.TabIndex" type="System.Int32, mscorlib">
+    <value>79</value>
+  </data>
+  <data name="btnProcessLog.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>TopRight</value>
+  </data>
+  <data name="&gt;&gt;btnProcessLog.Name" xml:space="preserve">
+    <value>btnProcessLog</value>
+  </data>
+  <data name="&gt;&gt;btnProcessLog.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnProcessLog.Parent" xml:space="preserve">
+    <value>panel7</value>
+  </data>
+  <data name="&gt;&gt;btnProcessLog.ZOrder" xml:space="preserve">
+    <value>2</value>
   </data>
   <data name="lblProcessStatusMessage.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -163,7 +232,7 @@
     <value>4, 0, 4, 0</value>
   </data>
   <data name="lblProcessStatusMessage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>676, 28</value>
+    <value>631, 28</value>
   </data>
   <data name="lblProcessStatusMessage.TabIndex" type="System.Int32, mscorlib">
     <value>58</value>
@@ -184,7 +253,7 @@
     <value>panel7</value>
   </data>
   <data name="&gt;&gt;lblProcessStatusMessage.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="panel7.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -229,6 +298,6 @@
     <value>NotificationsControl</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>AutoVersionsDB.WinApp.Utils.UserControlNinjectBase, AutoVersionsDB.WinApp.Designer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
