--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="deployIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\deployIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Doc_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Doc_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EditIcon32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EditIcon32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
