--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/Properties/Resources.resx
@@ -169,6 +169,9 @@
   <data name="info2_32_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\info2_32-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="listIcon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\listIcon_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="OpenIcon32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OpenIcon32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
