fix images in winformapp

--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/EditProjectView.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/EditProjectView.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,10 +57,47 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="errPrvProjectDetails.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="$this.TrayHeight" type="System.Int32, System.Private.CoreLib, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
     <value>87</value>
   </metadata>
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="btnSave.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAiCAIAAACx0EyoAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAcRJREFUSEvtlzFrwkAYho/WQQSpKIL/QTeL0C7SReoquCluKsbZoU4WHFRwkTo4
+        CG4O/oBOgouliyAuIqJT12y9rv30+05CmpS7JrZLny1f7n0flUs4GT8zB8F0Ou33+09uMJlMsPcEGw6H
+        Pp+PuUej0aDuI6xYLNId92i1WlRvKQgEAvF4/FoRCgva7ba1IBaL7XY7vPcN7wK65ny9Xns8Hmo50ul0
+        YG4WGL+dHdvt9kqgaRpNOc9ms9QiGI/HZkGv16Pl9oCAVjOWy+VoynmhUKCpoFwun1dQKpX+BcqCbrdL
+        y+0BwYUgn8/TlPNMJkMtAgtBNBo17m478CFAcLJareAJpRaBhQDw+/13iiQSiWAwSHkD1gIXMQsikciN
+        Y7xeL9V9FSSTSfxBnQAlVPeXgjd1TttJSpBKpWgkDUQwKyXYbDYviiyXS8xKCQaDwYMiEMGslKDZbN4r
+        UqvVMCsl+PgRmJUSwCe6VCSdTmPWKDiUWwrgzfWsyHw+x6yUAE5jj4qMRiPMSgnq9fqtIqfjhZTACb8u
+        qFardMVYOByGzeAQeOdTHWOVSoUtFgvTkc8tQqHQbDY7/D/Qdf31DOz3e875J4Js2pPBDBPDAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="imgValid.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAblJREFUSEut1MsrRGEYx/FhxMxk4TJqti5ZiamJnZQsKWWtrJQsLGxGsmUhNphZ
+        WCkbLP0DoliwIim5LUayckkKuXyf6Tl6GubiHb/61JzzPud3ptM5r++/EkhEK9GBQUxhFE26XFyCiWgN
+        ZbO4xDs+1ZyOuIcSKU/iWUvFG3bQqWNu4Z/XUSLlL/DKP7DGWoOOuYeiCdxpsWeb8kYdcQ9FXbgxxeIY
+        xT0WCkrQigPY8iv0w6+jbqEgjGXY5y7iKNMx91AyjHst9WwhrCPuoaQeKS31nKJDR9wTTKa/1EVTLB4w
+        joCOuYeSPlzD3mATER3JH4blDSnVw+/wXjdzfhe2/BHtOlJYuCCGXoT0VDocy2OQz98rl99Lupw/DJdj
+        AHs4R48uyZrsNSew//4IMR3JHQZbsAK7WaV4LLL1yl4zb86LJ4yhsA+KwSFk7ifiAuu4NefEPgrf50PJ
+        aAUXLCDzy8xmEj9ehJzhJlVctGpKsjlDUC/7W7gwAtkNfysW8ubEddwtFMiblLkFew7RpqNuocCPEcgW
+        YMtfMQO3x2NDSS02YG8ge323jhQfyqKYNuRLrtblP8Tn+wK61EBXQfPqAwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnNavToProcess.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAVtJREFUWEfdlz1ywjAQhW15dZccg2FcUbig4MShCxeg4iCZCbvGazaWrN9VihSP
+        Nc+Mn/z0jT1043gwHg1/5PW8AIuCxbSXy/nYdd0V9cmemOvvFDzgBfw6Ya39xvCfRVdxTjN8nrQA+vI2
+        XnfO4esiUE3akFswn6AgEbyVdhtOA4AhoQWQNNswDoRLgC94K402XAjxwrEGpGrbSIYwpuI2ciEMqaSN
+        IghjymmjCsKQUtuohjCmWBtqEIZEi/CFvxrHDy0IQ6LtcMJJLSD0CgAenCHymkHoCGC4c8aSR7M5hLOM
+        MTeZIef/hdCY/gtnMJzUCkKmPhROx7oQ0l7jTA2nqQphzjtgndUQ4l3zXoeCdr1aCPeecKleGYSbvd5e
+        NMcrgpCCc4P2vHQIxV3HLprjJUMYe6AUew6EKPD8NWsSTnIgpONpOn1gMG1Fy3A6niHshck8SC4aeofh
+        CcKMctjuVbJbAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
