--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/MainView.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/MainView.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,8 +57,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="lnkBtnChooseProject.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAwBJREFUWEfNl0lME1EYxx/LlSXsARNuJE3wAgWhgBGRraWiYIIBFbzgTb3gTT0R
+        o8aFshQxgoAmshiFeDJ6FmRpKahsAlLKUouEfXH5O+/h1A4zkGg61sPvMPP933vfvPd93/uGfP0OuBLm
+        wOLyKmN9Y0tSJCeksOgs3NzcQAhhREbulxTKBQkKCrYvzmMwmphxdX0T5y9cRHJyMpKSDv4iCYmJ2yQk
+        JEKlSvhrHtTWgfj6+ooc6DX2MQfedLwV2ZwJW9vf319kMA28Zw6scTFRUnIJqalpSEk5wu3EYbYbzuLW
+        7TsgRVwMOC5OY8Bq+2I/I7lhWbCwuIQ5qw22+QUsr65LCuXC9XVgfGISz9va0dzSitanzzA4NCIplAsS
+        r1IJYoBCj4MXLCwuY5Z7npm1wjIzx5iyzNgxW6YxOfUbRxuPZXrWPtYR5oBUFnT3GJjRzE0YFrYPnp6e
+        DA8PD7i7u4ughYxHyr4bh7hMID4+Prs6MDQyKrI5k+CQEJDAwCCR4cPgsP0InjQ14/qNm7JgNPWDNDW3
+        QKPJQkZGBjLValy+cpWVYN4Bufk/rmNXQtraXyA/vwB5eSdRUHAKpaXXJIVyQcLDw0VBSIsTL3j56jX0
+        1TWo0lejskqPiko9dOWVKNOV426Zbk+ohmp56Fg6B53rXs19DI+OSV/HfBp29fTC29tbZHcWoaGh0g70
+        9BqZA9bP8wgICBB0TM4kPp6rwkqlUvDSy8sLox/H7UdAMXPldGJyCuOfzBjjjsdZWG3zILQm1zc0orau
+        Hg/rG9DZ1S1YXG5cn4Zb335gZW2DQVuwTe7tTpGckNzcE4IYUCgUkkK54C6jQIEDFNPAO2aku0Kb0uM5
+        OdBqj0Kt0SAzU20nLT19Txy19J6hd06WVovs7GOgH9746PEubblhuy3v6OwS2ZyJn5+fdENi6OtnDtDf
+        teLic4iLi0NMTCxoykZFRf8R0dFKblyMgNjYAwydrgLk9JlCweIRERH/vi1fWlljvR+FZsJOkZy4uA4A
+        PwH2VvQCLucV3wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
         IACoJQAA7h4AAAAAAAABACAAODwAAJZEAAAoAAAAEAAAACAAAAABACAAAAAAAAAEAADDDgAAww4AAAAA
