--- a/src/AutoVersionsDB/AutoVersionsDB.WinApp/NotificationsView.resx
+++ b/src/AutoVersionsDB/AutoVersionsDB.WinApp/NotificationsView.resx
@@ -1,64 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
+﻿<root>
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -117,19 +57,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="lblProcessLog.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="lblProcessLog.Location" type="System.Drawing.Point, System.Drawing">
-    <value>686, 41</value>
+  <assembly alias="System.Drawing.Primitives" name="System.Drawing.Primitives, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="lblProcessLog.Location" type="System.Drawing.Point, System.Drawing.Primitives">
+    <value>686, 51</value>
   </data>
-  <data name="lblProcessLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>87, 23</value>
+  <data name="lblProcessLog.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>87, 29</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="lblProcessLog.TabIndex" type="System.Int32, mscorlib">
+  <assembly alias="System.Private.CoreLib" name="System.Private.CoreLib, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e" />
+  <data name="lblProcessLog.TabIndex" type="System.Int32, System.Private.CoreLib">
     <value>0</value>
   </data>
   <data name="lblProcessLog.Text" xml:space="preserve">
@@ -139,7 +79,7 @@
     <value>lblProcessLog</value>
   </data>
   <data name="&gt;&gt;lblProcessLog.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;lblProcessLog.Parent" xml:space="preserve">
     <value>panel7</value>
@@ -150,23 +90,27 @@
   <data name="pbStatus.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="pbStatus.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="pbStatus.Location" type="System.Drawing.Point, System.Drawing.Primitives">
     <value>2, 1</value>
   </data>
-  <data name="pbStatus.Size" type="System.Drawing.Size, System.Drawing">
-    <value>71, 61</value>
+  <assembly alias="System.Windows.Forms.Primitives" name="System.Windows.Forms.Primitives, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="pbStatus.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms.Primitives">
+    <value>3, 4, 3, 4</value>
+  </data>
+  <data name="pbStatus.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>71, 76</value>
   </data>
   <data name="pbStatus.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>CenterImage</value>
   </data>
-  <data name="pbStatus.TabIndex" type="System.Int32, mscorlib">
+  <data name="pbStatus.TabIndex" type="System.Int32, System.Private.CoreLib">
     <value>66</value>
   </data>
   <data name="&gt;&gt;pbStatus.Name" xml:space="preserve">
     <value>pbStatus</value>
   </data>
   <data name="&gt;&gt;pbStatus.Type" xml:space="preserve">
-    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Windows.Forms.PictureBox, System.Windows.Forms, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;pbStatus.Parent" xml:space="preserve">
     <value>panel7</value>
@@ -183,32 +127,45 @@
   <data name="btnProcessLog.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
-  <data name="btnProcessLog.Font" type="System.Drawing.Font, System.Drawing">
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="btnProcessLog.Font" type="System.Drawing.Font, System.Drawing.Common">
     <value>Microsoft Sans Serif, 20pt</value>
   </data>
-  <data name="btnProcessLog.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+  <data name="btnProcessLog.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAFuSURBVFhH7dctSwRRFMbx8SX5AopFi8GmCJotJj+AwSAINqvbrH4KQfwOYjMKBkEUNYhBi0Gw
+        GNQgKqL+n2FvGe6wc8+5IMI+8AuXZZ45sIednaKScRzhJ4MXLCIpe4iVWT1gCY1zBl24jgWHA4QhnrGC
+        RjmFLpopT/bsQD3X+MY7NtAxYYD58mTPLtSzhk184Atb6EVtwgBz5ako9nGVYBVKGOAe5/hsn2UbtakO
+        cIdwYRMtKGGAmAvUpvoVTGE6wSiUCVQ/W4a6dY/a5NqBWGbxpwOoszvA/xtgAENO6lCSBgi/Ayd4clKH
+        os7kAfRwenVSh5I0QPgKBjHspA7FtAMjGHNSh2LagUu8OalDMe3AMR6d1KGYdqAP/U7qUEw7oKfapJM6
+        FNMO3EBnD3Uoph04xK2TOhTTDvRA/+E81KGYdiBnugMkDeB9MYlFnR0HyPVqFqNOdYenYzS5X05jdI/a
+        5Hw9j1G37tFOUfwCJStiBQjnD2gAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnProcessLog.ImageAlign" type="System.Drawing.ContentAlignment, System.Drawing.Common">
     <value>MiddleLeft</value>
   </data>
-  <data name="btnProcessLog.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="btnProcessLog.Location" type="System.Drawing.Point, System.Drawing.Primitives">
     <value>703, -1</value>
   </data>
-  <data name="btnProcessLog.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="btnProcessLog.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms.Primitives">
     <value>0, 0, 0, 0</value>
   </data>
-  <data name="btnProcessLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 48</value>
+  <data name="btnProcessLog.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>63, 60</value>
   </data>
-  <data name="btnProcessLog.TabIndex" type="System.Int32, mscorlib">
+  <data name="btnProcessLog.TabIndex" type="System.Int32, System.Private.CoreLib">
     <value>79</value>
   </data>
-  <data name="btnProcessLog.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+  <data name="btnProcessLog.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing.Common">
     <value>TopRight</value>
   </data>
   <data name="&gt;&gt;btnProcessLog.Name" xml:space="preserve">
     <value>btnProcessLog</value>
   </data>
   <data name="&gt;&gt;btnProcessLog.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;btnProcessLog.Parent" xml:space="preserve">
     <value>panel7</value>
@@ -219,35 +176,35 @@
   <data name="lblProcessStatusMessage.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
   </data>
-  <data name="lblProcessStatusMessage.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="lblProcessStatusMessage.Font" type="System.Drawing.Font, System.Drawing.Common">
     <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="lblProcessStatusMessage.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="lblProcessStatusMessage.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="lblProcessStatusMessage.Location" type="System.Drawing.Point, System.Drawing.Primitives">
     <value>72, 1</value>
   </data>
-  <data name="lblProcessStatusMessage.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="lblProcessStatusMessage.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms.Primitives">
     <value>4, 0, 4, 0</value>
   </data>
-  <data name="lblProcessStatusMessage.Size" type="System.Drawing.Size, System.Drawing">
-    <value>607, 61</value>
+  <data name="lblProcessStatusMessage.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>607, 76</value>
   </data>
-  <data name="lblProcessStatusMessage.TabIndex" type="System.Int32, mscorlib">
+  <data name="lblProcessStatusMessage.TabIndex" type="System.Int32, System.Private.CoreLib">
     <value>58</value>
   </data>
   <data name="lblProcessStatusMessage.Text" xml:space="preserve">
     <value>Process Status Message</value>
   </data>
-  <data name="lblProcessStatusMessage.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+  <data name="lblProcessStatusMessage.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing.Common">
     <value>MiddleLeft</value>
   </data>
   <data name="&gt;&gt;lblProcessStatusMessage.Name" xml:space="preserve">
     <value>lblProcessStatusMessage</value>
   </data>
   <data name="&gt;&gt;lblProcessStatusMessage.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;lblProcessStatusMessage.Parent" xml:space="preserve">
     <value>panel7</value>
@@ -258,23 +215,23 @@
   <data name="panel7.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
   </data>
-  <data name="panel7.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="panel7.Location" type="System.Drawing.Point, System.Drawing.Primitives">
     <value>0, 0</value>
   </data>
-  <data name="panel7.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="panel7.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms.Primitives">
+    <value>4, 5, 4, 5</value>
   </data>
-  <data name="panel7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>771, 65</value>
+  <data name="panel7.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>771, 81</value>
   </data>
-  <data name="panel7.TabIndex" type="System.Int32, mscorlib">
+  <data name="panel7.TabIndex" type="System.Int32, System.Private.CoreLib">
     <value>67</value>
   </data>
   <data name="&gt;&gt;panel7.Name" xml:space="preserve">
     <value>panel7</value>
   </data>
   <data name="&gt;&gt;panel7.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=5.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;panel7.Parent" xml:space="preserve">
     <value>$this</value>
@@ -282,22 +239,22 @@
   <data name="&gt;&gt;panel7.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="$this.Localizable" type="System.Boolean, System.Private.CoreLib, Version=5.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
     <value>True</value>
   </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
+  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing.Primitives">
+    <value>8, 20</value>
   </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms.Primitives">
+    <value>4, 5, 4, 5</value>
   </data>
-  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>771, 65</value>
+  <data name="$this.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>771, 81</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>NotificationsControl</value>
+    <value>NotificationsView</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>AutoVersionsDB.WinApp.Utils.UserControlNinjectBase, AutoVersionsDB.WinApp.Designer, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>AutoVersionsDB.WinApp.Utils.UserControlNinjectBase, AutoVersionsDB.WinApp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
